# birdie_buddy

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  HEIC_IMAGE_PROCESSING_PLAN.md  README.md  conftest.py  docker-compose.yml  manage.py  pyproject.toml  pytest.ini  tailwind.config.js  tasks.py
.claude/: settings.local.json
.github/workflows/: ci.yml  deploy-prod.yml  merge-to-main.yml
ai/: heroicons.md
openspec/: AGENTS.md
openspec/changes/enhance-notes-with-llm/: README.md  proposal.md  tasks.md
src/birdie_buddy/: asgi.py  settings.py  urls.py  wsgi.py
src/birdie_buddy/components/: apps.py
src/birdie_buddy/practice/: apps.py  forms.py  models.py  urls.py  views.py
src/birdie_buddy/practice/migrations/: 0001_initial.py
src/birdie_buddy/practice/services/: notes_enhancement_service.py  notes_enhancement_service_test.py
src/birdie_buddy/practice/templatetags/: safe_html.py
src/birdie_buddy/practice/views/: enhance_notes_view_test.py  practice_session_create_view_test.py  practice_session_detail_edit_view_test.py
src/birdie_buddy/round_entry/: apps.py  forms.py  models.py  models_test.py  urls.py  views.py  views_test.py
src/birdie_buddy/round_entry/e2e/: test_scorecard_upload.py
src/birdie_buddy/round_entry/factories/: __init__.py  full_round_factory.py  hole_factory.py  round_factory.py  shot_data_factory.py  shot_factory.py
src/birdie_buddy/round_entry/migrations/: 0001_initial.py  0002_hole_shot.py  0003_hole_number.py  0004_hole_par.py  0006_shot_number.py  (+4 more)
src/birdie_buddy/users/: apps.py  factories.py  forms.py  views.py
(+71 files in other folders)
