[project]
name = "birdie-buddy"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Lee Sutton", email = "leesutton1@gmail.com" }
]
dependencies = [
    "django>=5.1.4",
    "django-crispy-forms>=2.3",
    "crispy-tailwind>=1.0.3",
    "django-htmx>=1.21.0",
    "django-extensions>=3.2.3",
    "django-cotton>=2.1.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "invoke>=2.2.0",
    "pytest>=8.3.4",
    "pytest-django>=4.9.0",
    "django-types>=0.20.0",
    "factory-boy>=3.3.1",
    "djlint>=1.36.4",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/birdie_buddy"]
